# psychopy_tobii_controller

./: .gitignore  README.md  psychopy_tobii_controller.py  pyproject.toml  setup.py
psychopy_tobii_controller/: __init__.py  constants.py  core.py  utility.py
psychopy_tobii_controller/ptc_cal/: __init__.py
psychopy_tobii_controller/ptc_getpos/: __init__.py
psychopy_tobii_controller/ptc_init/: __init__.py
psychopy_tobii_controller/ptc_message/: __init__.py
psychopy_tobii_controller/ptc_rec/: __init__.py
psychopy_tobii_controller/tobii_research_addons/: ScreenBasedCalibrationValidation.py  __init__.py  vectormath.py
ptc_components/: __init__.py  ptc_cal.py  ptc_getpos.py  ptc_init.py  ptc_message.py  ptc_rec.py
ptc_components/ptc_components/: ptc_cal.py  ptc_getpos.py  ptc_init.py  ptc_message.py  ptc_rec.py
samples/: builder_sample01.psyexp  sample01.py  sample02.py  sample03.py  sample04.py  sample05.py  sample06.py  utility_sample01.py
